fix error threads, threads scrollbar mobile version

--- a/src/app/login-components/password-reset-email/password-reset-email.component.scss
+++ b/src/app/login-components/password-reset-email/password-reset-email.component.scss
@@ -329,7 +329,7 @@ form {
 
                 >a {
                     position: absolute;
-                    margin-right: 280px;
+                    margin-right: 250px;
                 }
             }
         }
