--- a/src/app/main-components/main-components.component.scss
+++ b/src/app/main-components/main-components.component.scss
@@ -264,5 +264,10 @@ app-new-chat {
 
 
 
+.hiddenMainContent {
+  display: none !important;
+}
 
-
+.noneDisplay {
+  display: none !important;
+}
